--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "dataverse"]
+	path = dataverse
+	url = https://github.com/iqss/dataverse-client-r
+	shallow = true
+	registered = true
+[submodule "WhatIf"]
+	path = WhatIf
+	url = https://github.com/iqss/whatif
+	shallow = true
+	registered = true
